--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^0.14.7",
     "react-ladda": "^4.0.0",
     "react-maskedinput": "^3.1.0",
+    "card-react": "1.1.20",
     "react-redux": "^4.0.5",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.2.1",
@@ -78,7 +79,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": "^4.2.2"
   },
   "eslintConfig": {
     "env": {
